# pysworn

./: LICENSE  LICENSE.MIT  README.md  pyproject.toml
.github/: copilot-instructions.md
common/: pyproject.toml
common/src/pysworn/common/: __init__.py  tree.py
datasworn/: README.md  pyproject.toml
datasworn/src/pysworn/datasworn/: __init__.py  _inspect.py  _rich.py  cli.py  logging.py  main.py
datasworn/src/pysworn/datasworn/_datasworn/: __init__.py  classic.json  starforged.json  sundered_isles.json
datasworn/tests/: test_datasworn.py
journal/: pyproject.toml
journal/src/pysworn/journal/: app.py  provider.py  renderables.py
reference/: README.md  pyproject.toml
reference/src/pysworn/reference/: __init__.py  _inspect.py  _rich.py  app-2.py  app.py  app_2.py  category.py  data_table.py  history.py  history_state.py  logging.py  markdown.tcss  options.py  oracle.py  oracle_table.py  reference.tcss  rules.py  ruleset.py  screen.py  tabbed_content.py  tabs.py  themes.py  tree.py  viewer.py
reference/src/pysworn/reference/widgets/: tabbed_content.py
renderables/: README.md  pyproject.toml
renderables/src/pysworn/renderables/: TODO.md  __init__.py  __main__.py  logging.py  renderables.py
repl/: dsl.py  main.py  pyproject.toml  repl.py  test.sworn
repl/snippets/: path.py  plis.py  visitor.py
repl/src/pysworn/repl/: rollables.py  utils.py
repl/src/pysworn/repl/widgets/: autocomplete.py
repl/typings/datasworn/: models.pyi
repl/typings/pysworn/common/: __init__.pyi  tree.pyi
tests/: test_datasworn.py  test_renderables.py
typings/datasworn/: models.pyi
world/: main.py  pyproject.toml
