
[project]
name = "pysworn"
version = "0.1.0"
description = "Python interfaces for Ironsworn: Starforged"
readme = "README.md"
keywords = ["ironsworn", "starforged", "ttrpg"]
authors = [{ name = "Gerhard Brandt", email = "gbrandt@cern.ch" }]
requires-python = ">=3.12"
dependencies = [
    "datasworn",
    "pysworn-datasworn",
    "pysworn-reference",
    "pysworn-renderables",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
package = false # the project itself is not a package

[tool.uv.sources]
pysworn-reference = { workspace = true }
pysworn-renderables = { workspace = true }
pysworn-datasworn = { workspace = true }
datasworn = { path = "../datasworn/pkg/python/datasworn" }

[tool.uv.workspace]
members = [
    "datasworn",
    "reference",
    "journal",
    "renderables",
    "world",
]

[tool.uv.build-backend]
source-include = ["**"]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "textual-dev>=1.7.0",
    "pyinstrument>=5.0.1",
    "pytest-xdist>=3.8.0",
    "textual-dissect>=0.2.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]


[tool.poe.tasks]
fix = "uv run --active ruff check --fix"
dev = "uv run --active textual run --dev -c pysworn"
dev2 = "uv run --active textual run --dev -c pysworn-v2"

console = "uv run --active textual console"
