[project]
name = "pysworn-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pysworn = "pysworn.journal.app:run"


[tool.uv.build-backend]
module-name = "pysworn.journal"

[dependency-groups]
dev = ["textual-dev>=1.8.0"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
