[project]
name = "pysworn-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.4", "pysworn-datasworn"]

[project.scripts]
pysworn = "pysworn.journal.app:main"
provider-test = "pysworn.journal.provider:main"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "pysworn.journal"

[tool.uv.sources]
pysworn-datasworn = { workspace = true }

[dependency-groups]
dev = ["textual-dev>=1.8.0"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
